lab1/Test/L1-A-12-40.output
Error Type B at Line 15
Error Type B at Line 26
Error Type B at Line 34
Error Type B at Line 51
Error Type A at Line 60
