lab1/Test/L1-A-12-40.cmm
struct hgZSkEqu ;
int X ( ) {
  struct {
  }e ;
  if ( xySibkDlsS )   if ( hkmbFg )   while ( GfTKdnRv4X2c 
    )   Fvlxj ;

else   return Oig93bKcdliKB ;

else   if ( tQ3GhGN16vyzaD9WPnE ) {
    zY || muJvs75odsU1uT && k >= h1_Ut0EAM + VdXhWvQh 
      / ! - PAmELhWxeFcr1 ( I , yt7VciS8viw5zA_yDY = nMlsFOkBbRsZKBPwu2 
      < bKvUp4Hjra0KxJ462Px - aJl5HwJ18nv * bK9j1Joaxo9yzMgiBQNk 
      [ ZiGgXMiTWgcp <= - ( cMn2riEjlIye != YsUni9C * a7QX30n_vXxCjth 
      ( uYDjRWGLtcEl , pt0dZgvtmkAFZu6 , > zAPULG0QVkuCoP7j 
      || HhxPrPc . wcC6P8T_VKO_WbF9s ) / - 2144796161 ) 
      ] * vt83vWYsiK ( ) ) . Pgxw == 492728379.922249752 
      ;
  }

}
float ;
int UKzORtymWJotNoRG [ 149277747 ] 
;
int ;
;
int yCxfAf4sZsbV ( int zPOJGoc ) {
  int nZQaM49VhX35Ew8C ;
  int r8P3FSOm4rvvHeOps , O = VwZoN ;
  while ( M )   while ( tkY61Ni6 )   FAHg86BacFf6jcAChPAa 
    ;


  if ( EUFStfoStj52   while ( B )   WXtOQjeG5W_Rej9 
    ;

else   while ( LzoYPsVCtsNpNyn )   while ( y9F ) {
    r6bBMi ;
  }


}
int ;
int ;
int fGsUCHP8zn , _L9X_lWY 

;
int ;
struct tulJ MA4JV2EzQWputhDKwU 

int ;
int ;
struct QLR2ppgjJJuIabiwps {
};
int ;
int ovaDUxsYS7EPkj ( int v5C7Voy , int RP88AYlOOuvSpoQ 
  ) {
}
int ;
%